istio/istio-basic-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whereami
spec:
  selector:
    matchLabels:
      app: whereami
  template:
    metadata:
      labels:
        app: whereami
    spec:
      containers:
      - name: whereami
        image: gcr.io/google-samples/whereami:v1.2.6
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: whereami-svc
spec:
  type: ClusterIP
  selector:
    app: whereami
  ports:
  - port: 8000 
    targetPort: 8080
---
